# MLE_Lab1

./: Lab1.ipynb  README.md  configconfig.yaml  datadownload.py  modelscnn.py  pyproject.toml  scripts_evaluate.py  scripts_train.py  utils_logger.py
